--- a/app/assets/stylesheets/_mixin.scss
+++ b/app/assets/stylesheets/_mixin.scss
@@ -6,16 +6,16 @@
 }
 
 @mixin box-shadow($shadow) {
-  -webkit-border-radius: $shadow;
-     -moz-border-radius: $shadow;
-      -ms-border-radius: $shadow;
-          border-radius: $shadow;
+  -webkit-box-shadow: $shadow;
+     -moz-box-shadow: $shadow;
+      -ms-box-shadow: $shadow;
+          box-shadow: $shadow;
 }
 
 @mixin white-block() {
   background-color: #fff;
-  border-bottom: #e9e9ed 2px solid;
-  @include border-radius(5px);
+  @include box-shadow($shadow);
+  @include border-radius($radius);
 }
 
 @mixin button-default($green-gradient, $color-hover) {
