--- a/app/assets/stylesheets/pages/product.scss
+++ b/app/assets/stylesheets/pages/product.scss
@@ -80,10 +80,14 @@
 .product-question{
     margin-top:30px;
   }
+.price-bar{
+  position:absolute;
+  display: inline-block;
 
-.choose-product-block{
-  .price{
-    margin-top:30px;
+  .choose-product-block{
+    .price{
+      margin-top:30px;
+    }
   }
 }
 
@@ -95,7 +99,7 @@
   padding:20px;
   background:#E9F6E6;
   border-radius:$radius;
-  margin-top:20px;
+  margin:20px 0;
 
   input{
     padding:15px;
@@ -187,4 +191,19 @@
   font-size: 16px;
   color: $grey-text;
   margin-bottom: 35px;
+}
+
+.reassurance-bar{
+  margin-top: 60px;
+  padding:30px;
+
+    img{
+      float: left;
+      height: 40px;
+    }
+
+    span{
+      margin:10px 0 0 20px;
+    }
+  
 }
