bloc description produit

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -102,6 +102,7 @@
       <%= render partial: "products/price_bar" %>
     </div>
   </div>
+  <!--
   <div class="row">
     <div class="col-md-9 col-md-offset-1 detail-product-block">
       <p class="title-detail-product">Détails techniques</p>
@@ -122,9 +123,19 @@
         <% end %>
         </div>
       </div>
-    </div>
+    </div>-->
     <div class="col-md-12 col-md-offset-1 like-product-block">
       
+    </div>
+    <div class="row">
+      <div class="col-md-24">
+        <%= render partial: "products/bloc_product_description" %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-24">
+        <%= render partial: "products/bloc_product_tuto" %>
+      </div>
     </div>
   </div>
 </div>
