--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,8 +74,9 @@ body{
   }
 
   h3{
-    font-size:16px;
-    font-weight:600;
+    font-size:18px;
+    font-weight:100;
+    margin: 0;
   }
 
   h4{
