--- a/app/assets/stylesheets/pages/product.scss
+++ b/app/assets/stylesheets/pages/product.scss
@@ -207,3 +207,17 @@
     }
   
 }
+
+.bloc-product-description{
+  background:#fff;
+  margin-top: 60px;
+  padding:30px 0;
+
+    h3{
+      margin-bottom: 30px;
+    }
+
+    .item-description{
+      margin-bottom: 20px;
+    }
+}
