bloc tuto produit

--- a/app/views/products/_bloc_product_tuto.html.erb
+++ b/app/views/products/_bloc_product_tuto.html.erb
@@ -1,12 +1,15 @@
-<div class="bloc-product-description">
+<div class="bloc-product-tuto">
   <div class="row">
   <div class="col-md-7 col-md-offset-1">
-      <h3>Description & Détails techniques</h3>
-      <p>Liège naturel expansé pur conditionné en panneau rigide. Isolant thermique et phonique, le liège est obtenu à partir du chêne liège, réduit en granulés puis expansé à la vapeur. L’énergie, nécessaire à l’expansion du liège est issue à 95 % de la biomasse et 5 % de l’électricité. Particulièrement adapté au milieu humide, le liège est imputrescible, résistant à l’écrasement, absorbant acoustique et auto extinguible.</p>
+      <h3>Tuto : comment enduire le lège</h3>
+      <a class="btn-default" href="/tutorials">Tous nos tutoriels</a>
     </div>
     <div class="col-md-14 col-md-offset-1">
-      <h3>Description & Détails techniques</h3>
-      <p>Liège naturel expansé pur conditionné en panneau rigide. Isolant thermique et phonique, le liège est obtenu à partir du chêne liège, réduit en granulés puis expansé à la vapeur. L’énergie, nécessaire à l’expansion du liège est issue à 95 % de la biomasse et 5 % de l’électricité. Particulièrement adapté au milieu humide, le liège est imputrescible, résistant à l’écrasement, absorbant acoustique et auto extinguible.</p>
+      <h3>Conseil d'utilisation</h3>
+      <span>Domaine d'utilisation</span>
+      <p>Les panneaux de liège expansés sont particulièrement efficaces en isolation acoustique et thermique sous un revêtement type parquet ou dalle à clipser. Le liège expansé s’utilise pour l’isolation thermique, sous une dalle de béton, avant la pose d’un plancher chauffant.</p>
+      <span>Domaine d'utilisation</span>
+      <p>Les panneaux de liège expansés sont particulièrement efficaces en isolation acoustique et thermique sous un revêtement type parquet ou dalle à clipser. Le liège expansé s’utilise pour l’isolation thermique, sous une dalle de béton, avant la pose d’un plancher chauffant.</p>
     </div>
   </div>
 </div>
