--- a/app/assets/stylesheets/pages/product.scss
+++ b/app/assets/stylesheets/pages/product.scss
@@ -208,14 +208,23 @@
   
 }
 
+.bloc-product-tuto, .bloc-product-description{
+  padding:60px 0;
+
+  h3{
+      margin-bottom: 30px;
+    }
+}
+
+.bloc-product-tuto{
+  p{
+    margin-bottom: 30px;
+  }
+}
+
 .bloc-product-description{
   background:#fff;
   margin-top: 60px;
-  padding:30px 0;
-
-    h3{
-      margin-bottom: 30px;
-    }
 
     .item-description{
       margin-bottom: 20px;
