--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,11 +24,10 @@
       </div>
       <div class="col-md-8 col-md-offset-1">
         <div class="bloc-description">
-          <h4 class="product-marque text-uppercase"><%= @product.marque %>isocor</h4>
+          <h4 class="product-marque text-uppercase"><%= @product.marque %></h4>
           <h3 class="product-title"><%= @product.name %></h3>
           <p class="product-description">
-            <%= @product.description %>
-            Liège naturel expansé pur conditionné en panneau rigide. Isolant thermique et phonique, le liège est obtenu à partir du chêne liège, réduit en granulés puis expansé à la vapeur. L’énergie, nécessaire à l’expansion du liège… 
+            <%= @product.description %> 
             <a href="#">voir plus</a>
           </p>
         </div>
@@ -57,7 +56,7 @@
           <h5>Calculez la quantité juste à acheter</h5>
           <div class="row">
             <div class="col-md-12 product-question">
-              <input type="text" placeholder="surface en m2">
+              <input type="text" placeholder="Surface en m2">
             </div>
             <div class="col-md-12 product-question">
               <input type="text" placeholder="Quantité estimé">
