--- a/app/views/home/_svg.html.erb
+++ b/app/views/home/_svg.html.erb
@@ -3,7 +3,7 @@
 <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 viewBox="0 0 678.1 361" style="enable-background:new 0 0 678.1 361;" xml:space="preserve">
 <style type="text/css">
-.st0{fill:none;stroke:#FAFAFA;stroke-width:18;stroke-miterlimit:10;}
+.st0{fill:#FFFFFF;stroke:#FAFAFA;stroke-width:18;stroke-miterlimit:10;}
 .st1{enable-background:new    ;}
 .st2{clip-path:url(#SVGID_2_);}
 .st3{opacity:0.251;}
@@ -21,15 +21,15 @@ viewBox="0 0 678.1 361" style="enable-background:new 0 0 678.1 361;" xml:space="
 <g id="Calque_2">
 
     <rect x="39.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -43.2177 97.9122)" class="st0" width="113.5" height="113.5"/>
-    
+
     <rect x="201.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 4.2299 212.463)" class="st0" width="113.5" height="113.5"/>
-    
+
     <rect x="363.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 51.6776 327.0139)" class="st0" width="113.5" height="113.5"/>
-    
+
     <rect x="525.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 99.125 441.5648)" class="st0" width="113.5" height="113.5"/>
-    
+
     <rect x="201.8" y="206.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -110.3211 259.9107)" class="st0" width="113.5" height="113.5"/>
-    
+
     <rect x="363.8" y="206.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -62.8733 374.4615)" class="st0" width="113.5" height="113.5"/>
 </g>
 <g id="catégories_1_">
