--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,12 +27,12 @@
           <h4 class="product-marque text-uppercase"><%= @product.marque %></h4>
           <h3 class="product-title"><%= @product.name %></h3>
           <p class="product-description">
-            <%= @product.description %> 
+            <%= @product.description %>
             <a href="#">voir plus</a>
           </p>
         </div>
         <div class="product-review">
-          <h4>avis client</h4>
+          <h4>Avis client</h4>
           <div class="review">
             <div class="product-stars-container pull-left">
               <div class="contentRating" style="width:90%">
@@ -124,7 +124,7 @@
       </div>
     </div>-->
     <div class="col-md-12 col-md-offset-1 like-product-block">
-      
+
     </div>
     <div class="row">
       <div class="col-md-24">
