--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -52,7 +52,7 @@
           </ul>
       </div>
       <div class="col-md-6 col-sm-8 hidden-xs">
-          <h3>Meilleurs tutorials</h3>
+          <h3>Meilleurs tutoriels</h3>
             <ul>
               <li>
                 <%= link_to category_path('peinture-colles') do %>
@@ -153,8 +153,8 @@
       </div>
       <div class="newsletter col-md-6 col-sm-24">
         <h3>Newsletter</h3>
-        <input type="text" name="email" id="newsletter-mail"  placeholder="Email">
-        <input type="submit" value="s'inscrire" id="" class="btn btn-default">
+        <input type="text" name="email" id="newsletter-mail"  placeholder="Votre adresse mail">
+        <input type="submit" value="M'inscrire" id="" class="btn btn-default">
       </div>
     </div>
   </div>
@@ -163,7 +163,7 @@
       <div class="table-cell">
         <%= image_tag("logo.svg", :id => 'logo') %>
         <ul class="social-network pull-right">
-          <li> 
+          <li>
             <a href="https://twitter.com/climateriaux" target="_blank" rel="nofollow" class="footer-social-twitter">
               <i class="fa fa-twitter"></i>
             </a>
@@ -182,7 +182,7 @@
       </div>
     </div>
   </div>
-</footer> 
+</footer>
     <!--<div class="col-md-6 col-xs-24 footer-social">
       <p class="bold">Suivez nous :</p>
       <a href="https://twitter.com/climateriaux" target="_blank" rel="nofollow" class="footer-social-twitter">
