--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -154,7 +154,7 @@
       <div class="newsletter col-md-6 col-sm-24">
         <h3>Newsletter</h3>
         <input type="text" name="email" id="newsletter-mail"  placeholder="Votre adresse mail">
-        <input type="submit" value="M'inscrire" id="" class="btn btn-default">
+        <input type="submit" value="S'abonnez aux actus mail" id="" class="btn btn-default">
       </div>
     </div>
   </div>
