--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,6 +1,13 @@
 <h3>Création d'un nouveau produit</h3>
 
-<form class="panel">
+<%= form_for @product, url: {action: "create"} do |f| %>
+  <% if @product.errors.any? %>
+    <ul>
+      <% @product.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
   <div role="tabpanel">
     <ul class="nav nav-tabs nav-justified">
       <li role="presentation" class="active">
@@ -17,41 +24,49 @@
       <div id="edit" role="tabpanel" class="tab-pane active">
         <fieldset>
           <div class="form-group">
-            <label class="col-md-2 control-label">Nom:</label>
-            <div class="col-md-10">
-              <input type="text" placeholder="Product name.." class="form-control">
+            <%= f.label :name, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%= f.text_field :name, class: 'form-control', placeholder: "Nom du produit" %>
             </div>
           </div>
         </fieldset>
         <fieldset>
           <div class="form-group">
-            <label class="col-md-2 control-label">Description:</label>
-            <div class="col-md-10">
-              <textarea cols="5" placeholder="Short description.." class="form-control"></textarea>
+            <%= f.label :description, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%= f.text_area :description, class: 'form-control', placeholder: "Description du produit" %>
             </div>
           </div>
         </fieldset>
         <fieldset>
           <div class="form-group">
-            <label class="col-md-2 control-label">Prix:</label>
-            <div class="col-md-10">
-              <input type="text" placeholder="$ 123.20" class="form-control">
+            <%= f.label :slug, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%= f.text_field :slug, class: 'form-control', placeholder: "nom-du-produit" %>
             </div>
           </div>
         </fieldset>
         <fieldset>
           <div class="form-group">
-            <label class="col-md-2 control-label">Quantité:</label>
-            <div class="col-md-10">
-              <input type="number" placeholder="0" min="0" class="form-control">
+            <%= f.label :marque, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%= f.text_field :marque, class: 'form-control', placeholder: "Marque du produit" %>
             </div>
           </div>
         </fieldset>
         <fieldset>
           <div class="form-group">
-            <label class="col-md-2 control-label">Tax :</label>
-            <div class="col-md-10">
-              <input type="text" placeholder="20%" class="form-control">
+            <%= f.label :price, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%= f.text_field :price, class: 'form-control', placeholder: "15,60" %>
+            </div>
+          </div>
+        </fieldset>
+        <fieldset>
+          <div class="form-group">
+            <%= f.label :quantity, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <%= f.number_field :quantity, class: 'form-control', placeholder: "200" %>
             </div>
           </div>
         </fieldset>
@@ -142,10 +157,14 @@
           </div>
         </div>
       </div>
+      <fieldset>
+        <div class="form-group">
+          <div class="col-sm-4 col-sm-offset-2">
+            <%= link_to "Retour", admin_products_path, class: 'btn mb-sm btn-default' %>
+            <%= f.submit "Enregistrer", class: "btn mb-sm btn-primary" %>
+          </div>
+        </div>
+      </fieldset>
     </div>
   </div>
-</form>
-<div class="text-right mt-lg">
-  <button type="button" class="btn btn-warning">Discard</button>
-  <button type="button" class="btn btn-success">Enregistrer</button>
-</div>
+<% end %>
