ajout lien sur le header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,7 +73,7 @@
           </ul>
         </li>
         <li class="primary-category gros-oeuvre">
-          <a href="#">Gros oeuvre</a>
+          <%= link_to 'Gros oeuvre', category_path('gros-oeuvre') %>
           <ul>
             <li>
               <a href="#">item1</a>
@@ -92,8 +92,8 @@
             </li>
           </ul>
         </li>
-        <li class="primary-category gros-oeuvre">
-          <a href="#">Bois</a>
+        <li class="primary-category bois">
+          <%= link_to 'Bois', category_path('bois') %>
           <ul>
             <li>
               <a href="#">item1</a>
