--- a/app/assets/stylesheets/_old-style.scss
+++ b/app/assets/stylesheets/_old-style.scss
@@ -824,8 +824,8 @@ input[type=text],
 input[type=password],
 input[type=email],
 textarea {
-  padding: 8px 20px 6px;
-  border: 1px solid #d1d1d1;
+  padding: 15px;
+  border: 1px solid rgba(27,24,51,0.15);
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
