--- a/app/views/products/_bloc_product_tuto.html.erb
+++ b/app/views/products/_bloc_product_tuto.html.erb
@@ -2,6 +2,8 @@
   <div class="row">
   <div class="col-md-7 col-md-offset-1">
       <h3>Tuto : comment enduire le lège</h3>
+      <iframe src="https://player.vimeo.com/video/132372651" width="640" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/132372651">Climat&eacute;riaux</a> from <a href="https://vimeo.com/user33044406">Baptiste Le Breton</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       <a class="btn-default" href="/tutorials">Tous nos tutoriels</a>
     </div>
     <div class="col-md-14 col-md-offset-1">
