--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -136,5 +136,10 @@
         <%= render partial: "products/bloc_product_tuto" %>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-24">
+        <%= render partial: "products/bloc_product_review" %>
+      </div>
+    </div>
   </div>
 </div>
