--- a/app/assets/stylesheets/pages/product.scss
+++ b/app/assets/stylesheets/pages/product.scss
@@ -49,31 +49,6 @@
       display: inline-block;
       margin-left:10px;
     }
-
-    .product-stars-container{
-      background: image_url('review.svg') no-repeat;
-      width: 140px;
-      height: 25px;
-      background-size: auto 100%;
-      position: relative;
-     
-
-      .contentRating{
-        overflow: hidden;
-        height: 25px;
-        position: absolute;
-
-        .ratingvalue{
-          position: absolute;
-          left: 0;
-          top: 0;
-          bottom: 0;
-          background: image_url('review-value.svg') no-repeat;
-          background-size: auto 100%;
-          width: 140px;
-        }
-      }
-    }
   }
 }
 
@@ -97,7 +72,7 @@
 
 .product-amount{
   padding:20px;
-  background:#E9F6E6;
+  background:$green-light;
   border-radius:$radius;
   margin:20px 0;
 
@@ -208,7 +183,7 @@
   
 }
 
-.bloc-product-tuto, .bloc-product-description{
+.bloc-product-tuto, .bloc-product-description, .bloc-product-review{
   padding:60px 0;
 
   h3{
@@ -229,4 +204,68 @@
     .item-description{
       margin-bottom: 20px;
     }
+}
+
+.bloc-product-review{
+  background: #fff;
+
+  .review-count{
+    background:$green-light;
+    padding: 20px;
+    @include border-radius($radius);
+    margin-bottom: 30px;
+
+    span{
+      font-size:32px;
+    }
+  }
+
+  form{
+    .product-notation{
+      display: inline-block;
+    }
+
+    .product-comments{
+      margin-top:30px;
+
+      input{
+        margin-bottom:20px;
+      }
+    }
+
+    .drag-and-drop{
+      @include border-radius($radius);
+      border: 2px dashed $green;
+      padding: 20px;
+      text-align: center;
+      margin:30px 0;
+    }
+  }
+}
+
+
+/******************* REVIEW STAR *******************/
+.product-stars-container{
+  background: image_url('review.svg') no-repeat;
+  width: 140px;
+  height: 25px;
+  background-size: auto 100%;
+  position: relative;
+
+
+  .contentRating{
+    overflow: hidden;
+    height: 25px;
+    position: absolute;
+
+    .ratingvalue{
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      background: image_url('review-value.svg') no-repeat;
+      background-size: auto 100%;
+      width: 140px;
+    }
+  }
 }
