--- a/app/views/products/_bloc_product_review.html.erb
+++ b/app/views/products/_bloc_product_review.html.erb
@@ -25,7 +25,7 @@
             <input type="file" multiple>
             <p>Drag your files here or click in this area.</p>
           </div>
-          <button class="btn-default" type="submit">Upload</button>
+          <button class="btn-default" type="submit">Soumettre mon avis</button>
         </form>
       </div>
     </div>
