--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,6 +1,6 @@
 /******* COLORS ********/
 
-$green: #75ad31;
+$green: #68C258;
 $green-light: #E9F6E6;
 $green-hover: #91bd5a;
 $green-no-content: #45661d;
