--- a/app/views/products/_bloc_product_review.html.erb
+++ b/app/views/products/_bloc_product_review.html.erb
@@ -21,10 +21,10 @@
             <input type="text" name="title" class="input-default" placeholder="Donnez un titre à votre commentaire*"> 
             <textarea id="add_comment" class="input-default" placeholder="Écrivez votre commentaire*" aria-required="true" aria-label="Ajouter un commentaire "></textarea>
           </div>
-          <div class="drag-and-drop">
+          <!--<div class="drag-and-drop">
             <input type="file" multiple>
             <p>Drag your files here or click in this area.</p>
-          </div>
+          </div>-->
           <button class="btn-default" type="submit">Soumettre mon avis</button>
         </form>
       </div>
