--- a/app/views/products/_price_bar.html.erb
+++ b/app/views/products/_price_bar.html.erb
@@ -31,8 +31,10 @@
     <h3>Votre vendeur</h3>
   </div>
   <div class="select-customer">
-    <img class="img-customer">
-    <h4>Smartagro</h4>
+    <div class="bloc-title">
+      <%= image_tag 'logo_merchant.png' %>
+      <h4>Smartagro</h4>
+    </div>
     <span>96 % de satisfaits (230 sur 240 clients)</span>
     <p>« Livraison rapide et produit conforme. Je recommande ! » John Doe, 03/02/16</p>
     <a href="#">Lire les 26 avis</a>
