--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid page-product">
   <div class="row">
-    <div class="col-md-22 col-md-offset-2">
+    <div class="col-md-22 col-md-offset-1">
       <ol class="breadcrumb">
         <li>
           <%= link_to 'Accueil', root_path %>
@@ -88,7 +88,7 @@
           </div>
           <div class="col-md-8">
             <figure>
-              <%= image_tag 'echange.svg' %>
+              <%= image_tag 'paypal.svg' %>
               <figcaption>
                 <span class="pull-left">paiement sécurisé</span>
               </figcaption>
