--- a/app/assets/stylesheets/pages/product.scss
+++ b/app/assets/stylesheets/pages/product.scss
@@ -56,6 +56,11 @@
     margin-top:30px;
   }
 
+.add-to-cart {
+  @include button-default(#FACC39, #FACC39);
+  border-radius:30px;
+  margin-top: 35px;
+}
 
 .price-bar{
   position:absolute;
@@ -73,6 +78,11 @@
       h3{
         display:table-cell;
         vertical-align: middle;
+      }
+
+      h4{
+        margin-left: 20px;
+        display: inline-block;
       }
 
       .icon-customer-product, .icon-choose-product {
@@ -99,12 +109,6 @@
         background-size: 23px;
       }
 
-    }
-
-    .add-to-cart {
-      @include button-default(#FACC39, #FACC39);
-      border-radius:30px;
-      margin-top: 35px;
     }
 
     .select-customer, .select-product {
@@ -145,6 +149,11 @@
     padding:15px;
     border-radius:40px;
     width:100%;
+    border:0;
+
+    &:first-child{
+      background:rgba(28,24,51,0.07)
+    }
   }
 }
 
@@ -194,7 +203,11 @@
 
   h3{
       margin-bottom: 30px;
-    }
+  }
+
+  .btn-default{
+    margin-top:30px;
+  }
 }
 
 .bloc-product-tuto{
