--- a/app/views/products/_bloc_product_review.html.erb
+++ b/app/views/products/_bloc_product_review.html.erb
@@ -30,6 +30,31 @@
       </div>
     </div>
     <div class="col-md-14 col-md-offset-1">
+      <div class="user-review">
+        <div class="row">
+          <div class="col-md-7 col-md-offset-1">
+            <h3>Par John Doe le 12 décembre 2015</h3>
+            <div class="product-stars-container">
+              <div class="contentRating" style="width:90%">
+                <div class="ratingvalue"></div>
+              </div>
+            </div>
+            <div class="">
+              <span>Avez-vous trouvé cet avis utile ?</span>
+              <div class="comments-answer">
+                <span class="answer-yes">Oui</span>
+                <span>Ou</span>
+                <span class="answer-no">Non</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-14 col-md-offset-1">
+            <h3>Une isolation satisfaisante</h3>
+            <p>Article conforme à la description. Grâce à ce rouleau de liège, notre maison est mieux isolée à la fois de la chaleur mais aussi du bruit extérieur. Très facile d’utilisation, qualité plus que convenable. Je recommande !</p>
+            <a>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
