--- a/app/assets/stylesheets/pages/product.scss
+++ b/app/assets/stylesheets/pages/product.scss
@@ -260,6 +260,29 @@
       margin:30px 0;
     }
   }
+
+  .user-review{
+    @include border-radius($radius);
+    border:1px solid rgba(0,0,0,0.15);
+    padding:20px;
+
+    .comments-answer{
+
+      span{
+        padding-top:12px;
+      }
+
+       .answer-yes, .answer-no{
+        width: 50px;
+        height: 50px;
+        display: inline-block;
+        text-align: center;
+        border: 1px solid $green;
+        @include border-radius(25px);
+        color:$green;
+      }
+    }
+  }
 }
 
 
