--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
               <%= image_tag("ccm1.png") %>
             </div>
             <div class="item-description col-md-10">
-              <h3>Une communauté d'entreaide et de conseil</h3>
+              <h3>Une communauté d'entre aide et de conseil</h3>
               <p>Climateraiux n'est pas seulement un marché, c'est aussi un lieu d'échange sur lequel vous pouvez discuter de vos travaux, trouver des conseil avisés, et demander de l'aide à tout moment. Nous mettons en avant les échanges communautaires, car c'est en retrouvant des gens comme vous et aux expérience similaires que votre projet gagnera en maturité.<br><br>Retrouvez la plateforme d'entraide sur : <a href="#">communaute.climateriaux.fr</a></p>
             </div>
           </div>
@@ -136,12 +136,12 @@
         <p>Tous nos systèmes de paiement sont chiffrés et certifiés par des banques françaises</p>
       </div>
       <div class="rassurance col-md-8 col-sm-24">
-        <%= image_tag("truck.svg") %>
+        <%= image_tag 'livraison.svg' %>
         <h3>Livraison à l’adresse de votre choix</h3>
         <p>Définissez une adresse de livraison et trouvez les marchands les plus proches pour vos produits</p>
       </div>
       <div class="rassurance col-md-8 col-sm-24">
-        <%= image_tag("return.svg") %>
+        <%= image_tag 'echange.svg' %>
         <h3>Retour sous 10 jours</h3>
         <p>Pas convaincu de votre commande ? Tous les produits peuvent être retournés pendant une durée de 15 jours</p>
       </div>
