--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,17 @@
         <ul class="nav navbar-nav">
           <li class="block-user">
             <%= link_to root_path do %>
-            <i class="fa fa-user"></i> Mon compte
+              Aide
+            <% end %>
+          </li>
+          <li class="block-user">
+            <%= link_to root_path do %>
+              Le blog
+            <% end %>
+          </li>
+          <li class="block-user">
+            <%= link_to root_path do %>
+              Mon compte
             <% end %>
           </li>
           <li class="block-cart">
