--- a/app/assets/stylesheets/pages/search.scss
+++ b/app/assets/stylesheets/pages/search.scss
@@ -19,7 +19,8 @@
       height: 60px;
       width: 60px;
       vertical-align: top;
-      margin-left: -2px;
+      margin-left: -4px;
+      padding: 15px 40px 15px 24px;
     }
   }
 }
