--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -3,7 +3,9 @@
     <div class="col-md-23 col-md-offset-1 ">
       <%= form_for search_path, :html => {:class => 'search-bar'}, method: :get do |f| %>
         <%= text_field_tag :search, params[:search], :class => 'search-field', placeholder: 'Recherche' %>
-        <%= submit_tag "", name: nil, :class => 'btn btn-default search-button' %>
+        <%= button_tag(type: 'submit', class: "btn btn-default search-button") do %>
+          <i class="fa fa-search" aria-hidden="true"></i>
+        <% end %>
       <% end %>
     </div>
   </div>
